--- a/queries.ipynb
+++ b/queries.ipynb
@@ -70,6 +70,107 @@
     "```\n",
     "---"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> <strong> 005 - Japanese Cities' Attributes -- </strong>\n",
+    "<font size=2px> [Copy the Query and try it on HackerRank](https://www.hackerrank.com/challenges/japanese-cities-attributes/problem?isFullScreen=true)\n",
+    "\n",
+    "\n",
+    "```sql\n",
+    "\n",
+    "SELECT * FROM CITY WHERE CountryCode = 'JPN';\n",
+    "\n",
+    "```\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> <strong> 006 - Japanese Cities' Names -- </strong>\n",
+    "<font size=2px> [Copy the Query and try it on HackerRank](https://www.hackerrank.com/challenges/japanese-cities-name/problem?isFullScreen=true)\n",
+    "\n",
+    "\n",
+    "```sql\n",
+    "\n",
+    "SELECT Name FROM CITY WHERE CountryCode = 'JPN';\n",
+    "\n",
+    "```\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> <strong> 007 - Weather Observation Station 1 -- </strong>\n",
+    "<font size=2px> [Copy the Query and try it on HackerRank](https://www.hackerrank.com/challenges/weather-observation-station-1/problem?isFullScreen=true)\n",
+    "\n",
+    "\n",
+    "```sql\n",
+    "\n",
+    "SELECT City, State FROM Station; \n",
+    "\n",
+    "```\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> <strong> 008 - Weather Observation Station 3 -- </strong>\n",
+    "<font size=2px> [Copy the Query and try it on HackerRank](https://www.hackerrank.com/challenges/weather-observation-station-3/problem?isFullScreen=true)\n",
+    "\n",
+    "\n",
+    "```sql\n",
+    "\n",
+    "SELECT DISTINCT City FROM Station WHERE (ID % 2) = 0;\n",
+    "\n",
+    "```\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> <strong> 009 - Weather Observation Station 4 -- </strong>\n",
+    "<font size=2px> [Copy the Query and try it on HackerRank](https://www.hackerrank.com/challenges/weather-observation-station-4/problem?isFullScreen=true)\n",
+    "\n",
+    "\n",
+    "```sql\n",
+    "\n",
+    "SELECT (COUNT(City) - COUNT(DISTINCT City)) FROM Station;\n",
+    "\n",
+    "```\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> <strong> 010 - Weather Observation Station 5-- </strong>\n",
+    "<font size=2px> [Copy the Query and try it on HackerRank](https://www.hackerrank.com/challenges/weather-observation-station-5/problem?isFullScreen=true)\n",
+    "\n",
+    "\n",
+    "```sql\n",
+    "\n",
+    "SELECT City, LENGTH(City) FROM Station \n",
+    "WHERE LENGTH(City) = (SELECT MIN(LENGTH(City)) FROM Station)\n",
+    "ORDER BY LENGTH(City), City ASC LIMIT 1;\n",
+    "SELECT City, LENGTH(City) FROM Station \n",
+    "WHERE LENGTH(City) = (SELECT MAX(LENGTH(City)) FROM Station)\n",
+    "ORDER BY LENGTH(City), City ASC LIMIT 1;\n",
+    "\n",
+    "```\n",
+    "---"
+   ]
   }
  ],
  "metadata": {
