ci(sql): solved challenge 011

--- a/queries.ipynb
+++ b/queries.ipynb
@@ -171,6 +171,23 @@
     "```\n",
     "---"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> <strong> 011 - Weather Observation Station 6 -- </strong>\n",
+    "<font size=2px> [Copy the Query and try it on HackerRank](https://www.hackerrank.com/challenges/weather-observation-station-6/problem?isFullScreen=true)\n",
+    "\n",
+    "\n",
+    "```sql\n",
+    "\n",
+    "SELECT CITY FROM STATION\n",
+    "WHERE UPPER(LEFT(CITY, 1)) IN ('A','E','I','O','U');\n",
+    "\n",
+    "```\n",
+    "---"
+   ]
   }
  ],
  "metadata": {
