--- a/queries.ipynb
+++ b/queries.ipynb
@@ -188,6 +188,23 @@
     "```\n",
     "---"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> <strong> 012 - Weather Observation Station 7 -- </strong>\n",
+    "<font size=2px> [Copy the Query and try it on HackerRank](https://www.hackerrank.com/challenges/weather-observation-station-7/problem?isFullScreen=true)\n",
+    "\n",
+    "\n",
+    "```sql\n",
+    "\n",
+    "SELECT DISTINCT CITY FROM STATION\n",
+    "WHERE UPPER(CITY) LIKE '%[AEIOU]';\n",
+    "\n",
+    "```\n",
+    "---"
+   ]
   }
  ],
  "metadata": {
